[workspace]
members = ["http-server","examples/*"]
authors = ["Kariuki George Thuo <kariukigeorge2030@gmail.com>"]
resolver = "2"


[workspace.dependencies]
tokio = {version = "1.39.3", features = ["full"]}
serde = "1.0.208"
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.38"                                # error handling


