[package]
name = "http-server"
version = "0.1.0"
authors = ["Kariuki George Thuo <kariukigeorge2030@gmail.com>"]
edition = "2021"



[dependencies]
flate2 = "1.0.30"
tokio = {workspace = true}

serde = {workspace = true}
anyhow = {workspace = true}

bytes = {workspace = true}

thiserror = {workspace = true}
      
regex = "1.10.6"
[dev-dependencies]
pretty_assertions = "1.3.0"
